Добавляет apperance для firefox

--- a/academy/slider/index.html
+++ b/academy/slider/index.html
@@ -44,16 +44,14 @@
       display: flex;
       /* flex-direction: column; */
     }
-
+    /* Для chrome */
     .input::-webkit-outer-spin-button,
     .input::-webkit-inner-spin-button {
       appearance: none;
     }
-
+    /* Для firefox */
     .input {
-      padding: 10px;
-      appearance: none;
-      -moz-appearance: none;
+      appearance: textfield;
     }
   </style>
 </head>
