Добавляет заголовки смысловым разделам

--- a/academy/device/index.html
+++ b/academy/device/index.html
@@ -15,23 +15,25 @@
     </nav>
   </header>
   <main>
+    <h1 class="visually-hidden">Магазин "Device"</h1>
     <section class="slide">
-
+      <h2 class="visually-hidden">Популярные товары</h2>
     </section>
     <section class="categories">
-
+      <h2 class="visually-hidden">Категории товаров</h2>
     </section>
     <section class="services">
-
+      <h2 class="visually-hidden">Обслуживание</h2>
     </section>
     <section class="order">
-
+      <h2 class="visually-hidden">Специальный заказ</h2>
     </section>
     <section class="about-us-contacts">
-
+      <h2>О нас</h2>
+      <h2>Контакты</h2>
     </section>
     <section class="subscription">
-
+      <h2 class="visually-hidden">Подписка на рассылку</h2>
     </section>
   </main>
   <footer class="main-footer">
