--- a/academy/device/index.html
+++ b/academy/device/index.html
@@ -9,9 +9,36 @@
   <title>device</title>
 </head>
 <body>
-  <header class="main-header">
-    <nav class="main-header-nav">
-
+  <header class="header">
+    <nav class="header-nav">
+    <a href="#">
+      <img src="#" width="145" height="36" alt="Логотип Девайс.">
+    </a>
+    <ul class="header-nav-user">
+      <li class="header-nav-user-item">
+        <a href="#">Войти</a>
+      </li>
+      <li class="header-nav-user-item">
+        <a href="#">Сравнить</a>
+      </li>
+      <li class="header-nav-user-item">
+        <a href="#">Корзина</a>
+      </li>
+    </ul>
+    <ul class="header-nav-site">
+      <li class="header-nav-site-item">
+        <a href="#">Каталог товаров</a>
+      </li>
+      <li class="header-nav-site-item">
+        <a href="#">Доставка</a>
+      </li>
+      <li class="header-nav-site-item">
+        <a href="#">Гарантия</a>
+      </li>
+      <li class="header-nav-site-item">
+        <a href="#">Контакты</a>
+      </li>
+    </ul>
     </nav>
   </header>
   <main>
