--- a/academy/device/index.html
+++ b/academy/device/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,39 +9,46 @@
   <link rel="stylesheet" href="/css/style.css">
   <title>device</title>
 </head>
+
 <body>
   <header class="header">
     <nav class="header-nav">
-    <a href="#">
-      <img src="#" width="145" height="36" alt="Логотип Девайс.">
-    </a>
-    <ul class="header-nav-user">
-      <li class="header-nav-user-item">
-        <a href="#">Войти</a>
-      </li>
-      <li class="header-nav-user-item">
-        <a href="#">Сравнить</a>
-      </li>
-      <li class="header-nav-user-item">
-        <a href="#">Корзина</a>
-      </li>
-    </ul>
-    <ul class="header-nav-site">
-      <li class="header-nav-site-item">
-        <a href="#">Каталог товаров</a>
-      </li>
-      <li class="header-nav-site-item">
-        <a href="#">Доставка</a>
-      </li>
-      <li class="header-nav-site-item">
-        <a href="#">Гарантия</a>
-      </li>
-      <li class="header-nav-site-item">
-        <a href="#">Контакты</a>
-      </li>
-    </ul>
+      <a href="#">
+        <img src="#" alt="Логотип Девайс.">
+      </a>
+      <form class="header-nav-form" action="https://echo.htmlacademy.ru" method="get">
+        <label class="header-nav-label visually-hidden" for="header-search">Поиск по сайту</label>
+        <input class="header-nav-input" type="search" name="search" id="header-search" placeholder="Текст поиска">
+        <button class="header-nav-button" type="submit">Найти</button>
+      </form>
+      <ul class="header-nav-user">
+        <li class="header-nav-user-item">
+          <a href="#">Войти</a>
+        </li>
+        <li class="header-nav-user-item">
+          <a href="#">Сравнить</a>
+        </li>
+        <li class="header-nav-user-item">
+          <a href="#">Корзина</a>
+        </li>
+      </ul>
+      <ul class="header-nav-site">
+        <li class="header-nav-site-item">
+          <a href="#">Каталог товаров</a>
+        </li>
+        <li class="header-nav-site-item">
+          <a href="#">Доставка</a>
+        </li>
+        <li class="header-nav-site-item">
+          <a href="#">Гарантия</a>
+        </li>
+        <li class="header-nav-site-item">
+          <a href="#">Контакты</a>
+        </li>
+      </ul>
     </nav>
   </header>
+
   <main>
     <h1 class="visually-hidden">Магазин "Device"</h1>
     <section class="slide">
@@ -48,6 +56,44 @@
     </section>
     <section class="categories">
       <h2 class="visually-hidden">Категории товаров</h2>
+      <ul class="categories-list">
+        <li class="categories-item">
+          <a href="#">
+            <img src="#" alt="Очки.">
+            <h3>Виртуальная реальность</h3>
+          </a>
+        </li>
+        <li class="categories-item">
+          <a href="#">
+            <img src="#" alt="Монопод.">
+            <h3>Моноподы для селфи</h3>
+          </a>
+        </li>
+        <li class="categories-item">
+          <a href="#">
+            <img src="#" alt="Камера.">
+            <h3>Экшн-камеры</h3>
+          </a>
+        </li>
+        <li class="categories-item">
+          <a href="#">
+            <img src="#" alt="Браслет.">
+            <h3>Фитнес-браслеты</h3>
+          </a>
+        </li>
+        <li class="categories-item">
+          <a href="#">
+            <img src="#" alt="Часы.">
+            <h3>Умные часы</h3>
+          </a>
+        </li>
+        <li class="categories-item">
+          <a href="#">
+            <img src="#" alt="Квадрокоптер.">
+            <h3>Квадрокоптеры</h3>
+          </a>
+        </li>
+      </ul>
     </section>
     <section class="services">
       <h2 class="visually-hidden">Обслуживание</h2>
@@ -56,15 +102,18 @@
       <h2 class="visually-hidden">Специальный заказ</h2>
     </section>
     <section class="about-us-contacts">
-      <h2>О нас</h2>
-      <h2>Контакты</h2>
+      <h2 class="visually-hidden">О компании</h2>
+        <h3>О нас</h3>
+        <h3>Контакты</h3>
     </section>
     <section class="subscription">
       <h2 class="visually-hidden">Подписка на рассылку</h2>
     </section>
   </main>
+
   <footer class="main-footer">
 
   </footer>
 </body>
+
 </html>
