--- a/academy/example/linear-gradient/index.html
+++ b/academy/example/linear-gradient/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,13 +8,17 @@
   <link rel="stylesheet" href="style.css">
   <title>linear-gradient</title>
 </head>
+
 <body>
   <h1>linear-gradient</h1>
   <div class="deg"></div>
   <h2>колорстоп</h2>
   <p>Колорстоп задаёт где будет распологаться самая насыщенная часть цвета.</p>
   <div class="colorstop"></div>
-  <p>Резкий переход</p>
+  <p>Резкий переход в "%"</p>
   <div class="colorstop-1"></div>
+  <p>резкий переход в "px"</p>
+  <div class="colorstop-2"></div>
 </body>
+
 </html>
