--- a/academy/Swedish-Bitter/index.html
+++ b/academy/Swedish-Bitter/index.html
@@ -6,6 +6,26 @@
   <title>Swedish Bitter</title>
 </head>
 <body>
-
+  <header class="page-header">
+    <nav class="main-nav">
+      <p class="logo">
+        <img src="images/logo.svg" alt="Swedish Bitter" width="197" height="29">
+      </p>
+      <ul class="site-navigation">
+        <li class="site-navigation-item">
+          <a href="#">Факты</a>
+        </li>
+        <li class="site-navigation-item">
+          <a href="#">Показания</a>
+        </li>
+        <li class="site-navigation-item">
+          <a href="#">Состав</a>
+        </li>
+      </ul>
+      <a href="#" class="search">
+        <img src="images/loupe.svg" width="20" height="20" alt="search">
+      </a>
+    </nav>
+  </header>
 </body>
 </html>
