--- a/academy/Swedish-Bitter/index.html
+++ b/academy/Swedish-Bitter/index.html
@@ -27,5 +27,19 @@
       </a>
     </nav>
   </header>
+  <main class="main-content">
+    <section class="hero">
+      <h1>Бальзам «Swedish Bitter»</h1>
+      <img src="images/hero.jpg" width="1100" height="510" alt="Девушка с бальзамом">
+    </section>
+    <section class="quote">
+      <blockquote>
+        <p>Кто принимает бальзам утром и вечером, тому не нужны
+          другие лекарства, так как он укрепляет тело, оживляет
+          нервы и освежает кровь, снимает дрожь в руках и ногах. Тело остается упругим, лицо молодым и красивым.</p>
+      </blockquote>
+      <footer>Автор бальзама, Доктор Клаус Замст /1620-1724 г./</footer>
+    </section>
+  </main>
 </body>
 </html>
