--- a/academy/Swedish-Bitter/index.html
+++ b/academy/Swedish-Bitter/index.html
@@ -34,12 +34,27 @@
     </section>
     <section class="quote">
       <blockquote>
-        <p>Кто принимает бальзам утром и вечером, тому не нужны
-          другие лекарства, так как он укрепляет тело, оживляет
-          нервы и освежает кровь, снимает дрожь в руках и ногах. Тело остается упругим, лицо молодым и красивым.</p>
+        <p>
+          Кто принимает бальзам утром и вечером, тому не нужны другие лекарства, так как он укрепляет тело, оживляет нервы и освежает кровь, снимает дрожь в руках и ногах. Тело остается упругим, лицо молодым и красивым.
+        </p>
       </blockquote>
       <footer>Автор бальзама, Доктор Клаус Замст /1620-1724 г./</footer>
     </section>
+    <article class="fact-article">
+      <h2>Факт 1</h2>
+      <h3 class="">104 года прожил автор бальзама</h3>
+      <p>Не у каждого лекарственного препарата есть такая удивительная история возникновения, уходящая к временам Парацельса, как у «Шведской горечи». Всю жизнь Парацельс искал эликсир долголетия. Он экспериментировал с рецептами. </p>
+      <p>Позднее на основании оставшихся после Парацельса исследований шведский доктор Клауст Замст создал рецепт удивительного эликсира, который принимал сам. Кстати, умер доктор Замст на 104-м году жизни, упав с лошади при верховой езде.</p>
+      <img class="fact-article-img" src="images/pic 4.jpg" width="420" height="470" alt="Мужчина">
+    </article>
+    <article class="fact-article">
+      <h2>Факт 2</h2>
+      <h3 class="">40 показаний</h3>
+      <p>Эффективность бальзама «Шведская горечь» отмечена как при наружном, так и внутреннем применении. У бальзама есть более 40 показаний к применению.</p>
+      <p>Даже в странах с очень высоким уровнем медицины, таких как Германия и Австрия, бальзам «Шведская Горечь» продается в каждой аптеке!</p>
+      <img class="fact-article-img" src="images/pexels-wallace-chuck-3704611 1.jpg" width="420" height="470" alt="Книга">
+    </article>
+
   </main>
 </body>
 </html>
