creates section symptoms

--- a/academy/Swedish-Bitter/index.html
+++ b/academy/Swedish-Bitter/index.html
@@ -54,7 +54,20 @@
       <p>Даже в странах с очень высоким уровнем медицины, таких как Германия и Австрия, бальзам «Шведская Горечь» продается в каждой аптеке!</p>
       <img class="fact-article-img" src="images/pexels-wallace-chuck-3704611 1.jpg" width="420" height="470" alt="Книга">
     </article>
-
+    <section class="symptoms">
+      <h2>Показания</h2>
+      <ul class="symptoms-list">
+        <li class="symptoms-item">Сниженный тонус, не хватает энергии</li>
+        <li class="symptoms-item">Прыщи, бородавки и растяжки</li>
+        <li class="symptoms-item">Слабая память и концентрация</li>
+        <li class="symptoms-item">Болеете чаще раза в год?</li>
+        <li class="symptoms-item">Головные боли</li>
+        <li class="symptoms-item">Синяки, шишки, ожоги, порезы долго не проходят</li>
+        <li class="symptoms-item">Плохо засыпаете и часто просыпаетесь</li>
+      </ul>
+      <a class="cta-button" href="#">Избавится от проблем</a>
+      <img class="symptoms-images" src="images/human 1.jpg" width="500" height="689" alt="human anatomy">
+    </section>
   </main>
 </body>
 </html>
