creates section compound + img

--- a/academy/Swedish-Bitter/index.html
+++ b/academy/Swedish-Bitter/index.html
@@ -68,6 +68,32 @@
       <a class="cta-button" href="#">Избавится от проблем</a>
       <img class="symptoms-images" src="images/human 1.jpg" width="500" height="689" alt="human anatomy">
     </section>
+    <section>
+      <h2>Состав</h2>
+      <img class="active-img" src="images/Photo.jpg" width="740" height="740" alt="Гравюра">
+      <ul class="gallery-preview">
+        <li class="preview-item">
+          <a href="#">
+            <img src="images/Photo 4.jpg" width="170" height="170" alt="Гравюра">
+          </a>
+        </li>
+        <li class="preview-item">
+          <a href="#">
+            <img src="images/Photo 3.jpg" width="170" height="170" alt="Гравюра">
+          </a>
+        </li>
+        <li class="preview-item">
+          <a href="#">
+            <img src="images/Photo 2.jpg" width="170" height="170" alt="Гравюра">
+          </a>
+        </li>
+        <li class="preview-item">
+          <a href="#">
+            <img src="images/Photo 1.jpg" width="170" height="170" alt="Гравюра">
+          </a>
+        </li>
+      </ul>
+    </section>
   </main>
 </body>
 </html>
